banner title and description update

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
     <header class="banner">
         <div class="banner-content">
-            <h1 class="banner-title font-primary">Let’s Help Those Who Are More In Need</h1>
-            <p class="banner-description font-secondary">Giving does not only precede receiving; it is the reason for
-                it. It is in giving that we receive.</p>
+            <h1 class="banner-title font-primary">Helping Lives That Need Support the Most</h1>
+            <p class="banner-description font-secondary">True happiness begins with giving, because what we share shapes who we become.</p>
             <button class="btn-primary">Donate Now</button>
         </div>
     </header>
